--- a/docroot/modules/custom/alshaya_rcs/templates/node--rcs-product--full-magazine-v2.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/templates/node--rcs-product--full-magazine-v2.html.twig
@@ -72,7 +72,7 @@
  * @ingroup themeable
  */
 #}
-{% extends 'node--acq-product--full.html.twig' %}
+{% extends '@alshaya_rcs/node--rcs-product--full.html.twig' %}
 {% set attributes = attributes.addClass('magazine-layout-node') %}
 {% block mainContent %}
 V2 magazine
