--- a/docroot/modules/custom/alshaya_rcs/templates/node--rcs-product--full.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/templates/node--rcs-product--full.html.twig
@@ -1,113 +1,55 @@
-{#
-/**
- * @file
- * Default theme implementation to display a node.
- *
- * Available variables:
- * - node: The node entity with limited access to object properties and methods.
- *   Only method names starting with "get", "has", or "is" and a few common
- *   methods such as "id", "label", and "bundle" are available. For example:
- *   - node.getCreatedTime() will return the node creation timestamp.
- *   - node.hasField('field_example') returns TRUE if the node bundle includes
- *     field_example. (This does not indicate the presence of a value in this
- *     field.)
- *   - node.isPublished() will return whether the node is published or not.
- *   Calling other methods, such as node.delete(), will result in an exception.
- *   See \Drupal\node\Entity\Node for a full list of public properties and
- *   methods for the node object.
- * - label: (optional) The title of the node.
- * - content: All node items. Use {{ content }} to print them all,
- *   or print a subset such as {{ content.field_example }}. Use
- *   {{ content|without('field_example') }} to temporarily suppress the printing
- *   of a given child element.
- * - author_picture: The node author user entity, rendered using the "compact"
- *   view mode.
- * - metadata: Metadata for this node.
- * - date: (optional) Themed creation date field.
- * - author_name: (optional) Themed author name field.
- * - url: Direct URL of the current node.
- * - display_submitted: Whether submission information should be displayed.
- * - attributes: HTML attributes for the containing element.
- *   The attributes.class element may contain one or more of the following
- *   classes:
- *   - node: The current template type (also known as a "theming hook").
- *   - node--type-[type]: The current node type. For example, if the node is an
- *     "Article" it would result in "node--type-article". Note that the machine
- *     name will often be in a short form of the human readable label.
- *   - node--view-mode-[view_mode]: The View Mode of the node; for example, a
- *     teaser would result in: "node--view-mode-teaser", and
- *     full: "node--view-mode-full".
- *   The following are controlled through the node publishing options.
- *   - node--promoted: Appears on nodes promoted to the front page.
- *   - node--sticky: Appears on nodes ordered above other non-sticky nodes in
- *     teaser listings.
- *   - node--unpublished: Appears on unpublished nodes visible only to site
- *     admins.
- * - title_attributes: Same as attributes, except applied to the main title
- *   tag that appears in the template.
- * - content_attributes: Same as attributes, except applied to the main
- *   content tag that appears in the template.
- * - author_attributes: Same as attributes, except applied to the author of
- *   the node tag that appears in the template.
- * - title_prefix: Additional output populated by modules, intended to be
- *   displayed in front of the main title tag that appears in the template.
- * - title_suffix: Additional output populated by modules, intended to be
- *   displayed after the main title tag that appears in the template.
- * - view_mode: View mode; for example, "teaser" or "full".
- * - teaser: Flag for the teaser state. Will be true if view_mode is 'teaser'.
- * - page: Flag for the full page state. Will be true if view_mode is 'full'.
- * - readmore: Flag for more state. Will be true if the teaser content of the
- *   node cannot hold the main body content.
- * - logged_in: Flag for authenticated user status. Will be true when the
- *   current user is a logged-in member.
- * - is_admin: Flag for admin user status. Will be true when the current user
- *   is an administrator.
- *
- * @see template_preprocess_node()
- *
- * @todo Remove the id attribute (or make it a class), because if that gets
- *   rendered twice on a page this is invalid CSS for example: two lists
- *   in different view modes.
- *
- * @ingroup themeable
- */
-#}
-{% extends 'node--acq-product--full.html.twig' %}
-{% set attributes = attributes.addClass('magazine-layout-node') %}
-{% block mainContent %}
-V2 magazine
-  <div class="content__main">
-    {% if content.gallery is not null %}
-      {{ content.gallery }}
-    {% else %}
-      <div id="product-zoom-container"></div>
-    {% endif %}
-  </div>
-{% endblock %}
-{% block contentSidebar %}
-  <div class="content-sidebar-wrapper">
-    {% block titleBlock %}
-      <div class="content__title_wrapper">
+{%
+set classes = [
+  'node',
+  'node--type-' ~ node.bundle|clean_class,
+  view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
+]
+%}
+
+  <article{{ attributes }} {{ gtm_attributes }}>
+  <div class="acq-content-product">
+    {% block mainContent %}
+      <div class="content__main {{ image_slider_position_pdp }}">
+        {% if content.gallery is not empty %}
+          {{ content.gallery }}
+        {% else %}
+          <div class="gallery-wrapper empty-gallery">
+            <div id="product-zoom-container">
+              <div class="cloudzoom"></div>
+              <div class="mobilegallery"></div>
+              <div id="product-full-screen-gallery-container" style="display: none;"></div>
+            </div>
+          </div>
+        {% endif %}
         {% if quantity_limit_enabled == true %}
           <div class="order-quantity-limit-message mobile-only"></div>
         {% endif %}
-        {% if content.brand_logo %}
-          <div class="brand-logo-wrapper">
-            {{ content.brand_logo }}
-          </div>
+
+        {% if show_crosssell_as_matchback == false %}
+          {% include directory ~ '/../alshaya_white_label/templates/partial/product-related.html.twig' %}
         {% endif %}
+      </div>
+    {% endblock %}
 
-        {% block productBrand %}
-        {% endblock %}
+    {% block contentSidebar %}
+      {% block titleBlock %}
+        <div class="content__title_wrapper">
+          {% if content.brand_logo %}
+            <div class="brand-logo-wrapper">
+              {{ content.brand_logo }}
+            </div>
+          {% endif %}
 
-        <h1>#rcs.product.name#</h1>
+          {% block productBrand %}
+          {% endblock %}
 
-        {% block pricePrefix %}
-        {% endblock %}
+          <h1>{{ label }}</h1>
 
-        <div class="info-wrapper">
+          {% block pricePrefix %}
+          {% endblock %}
+
           <div class="price-block {{ content.price_block_identifier }}">
-            {% include "@rcs_placeholders/product-price-block--v2.html.twig" %}
+            {{ content.price_block }}
           </div>
 
           {% if content.postpay %}
@@ -115,114 +57,187 @@ V2 magazine
             <div class="postpay {{ content.postpay_mode_class }}"> {{ content.postpay }} </div>
           {% endif %}
 
-          <div class="promotion-discount-wrapper">
-            <div class="price--discount discount-{{ content.price_block_identifier }}">
-              {% if content.price_block['#discount'] %}
-                ({{ content.price_block['#discount'] }})
-              {% endif %}
-            </div>
-
-            <div class="promotions promotions-full-view-mode">{% if content.promotions %}{{ content.promotions }}{% endif %}</div>
-          </div>
+          <div class="promotions promotions-full-view-mode">{% if content.promotions %}{{ content.promotions }}{% endif %}</div>
 
           {% if vat_text %}
             <div class="vat-text">
               {{ vat_text }}
             </div>
           {% endif %}
-        </div>
 
-        {% if content.same_day_delivery_text %}
-          <div class="same-day-delivery">
-            <div class="same-day-content">
-              <p>{{ content.same_day_delivery_text }}</p>
-              <p>{{ content.same_day_delivery_sub_text }}</p>
+          {% block itemCode %}
+            <div class="content--item-code">
+              <span class="field__label">{{ 'Item Code'|t }}:</span>
+              <span class="field__value">{{ content.item_code }}</span>
             </div>
-          </div>
-        {% elseif content.delivery_in_only_city_text %}
-          <div class="delivery-in-only-city">
-            <p>{{ content.delivery_in_only_city_text }}</p>
-          </div>
-        {% endif %}
+          {% endblock %}
 
-        {% if content.delivery_link is not empty %}
-          <div class="delivery">
-            {{ content.delivery_link }}
-          </div>
-        {% endif %}
-
-        <div class="free-gift-promotions free-gift-promotions-full-view-mode">{% if content.free_gift_promotions %}{{ content.free_gift_promotions }}{% endif %}</div>
-
-        {% if content.reviews_rating %}
-          {{content.reviews_rating}}
-        {% endif %}
-
-        <div class="basic-details-wrapper">
-          {{ content.field_skus }}
-          <div class="modal-share-this">
-            <span class="share-icon">{{  'Share'|t }}</span>
-            <div class="sharethis-container">
-              <span class="close-icon"></span>
-              <div class="sharethis-label">{{ 'Share'|t }}</div>
-              {{ content.sharethis }}
+          {% if content.delivery_link is not empty %}
+            <div class="delivery">
+              {{ content.delivery_link }}
             </div>
-          </div>
-          {% if quantity_limit_enabled == true %}
-            <div class="order-quantity-limit-message"></div>
           {% endif %}
-        </div>
-      </div>
-    {% endblock %}
 
-    {% block pdpSidebar %}
-      <div class="content__sidebar">
+          <div class="free-gift-promotions free-gift-promotions-full-view-mode">{% if content.free_gift_promotions %}{{ content.free_gift_promotions }}{% endif %}</div>
 
-        {% block sizeVolume %}
-        {% endblock %}
-
-        <div class="mobile-content-wrapper">
-          {% block shortDescBlock %}
-          {% endblock %}
-
-          {% block descBlock %}
-          {% endblock %}
-
-          {% block afterDescription %}
-          {% endblock %}
-
-          {% if content.home_delivery or content.click_and_collect %}
-            <div class="delivery-options-wrapper">
-              <div class="product-out-of-stock-layer"></div>
-              <div class="field__content">
-                {{ content.home_delivery }}
-
-                {% if content.click_and_collect %}
-                  {{ content.click_and_collect }}
-                {% endif %}
+          {% if content.same_day_delivery_text %}
+            <div class="same-day-delivery">
+              <div class="same-day-content">
+                <p>{{ content.same_day_delivery_text }}</p>
+                <p>{{ content.same_day_delivery_sub_text }}</p>
               </div>
             </div>
+          {% elseif content.delivery_in_only_city_text %}
+            <div class="delivery-in-only-city">
+              <p>{{ content.delivery_in_only_city_text }}</p>
+            </div>
           {% endif %}
+        </div>
+      {% endblock %}
+
+      {% block pdpSidebar %}
+        <div class="content__sidebar">
+          {% if content.reviews_rating %}
+            {{content.reviews_rating}}
+          {% endif %}
+          {% block sizeVolume %}
+          {% endblock %}
+
+          <div class="mobile-content-wrapper">
+            <div class="basic-details-wrapper">
+              {{ content.field_skus }}
+              {% if quantity_limit_enabled == true %}
+                <div class="order-quantity-limit-message"></div>
+              {% endif %}
+            </div>
+
+            {% block shortDescBlock %}
+              <div class="short-description-wrapper">
+                <div class="content--short-description">
+                  <h2 class="field__label">{{ 'Product Description'|t }}</h2>
+                  <div class="field__content-wrapper">
+                    <div class="field__content">
+                      <div class="desc-wrapper">
+                        {% if content.short_desc.label|render %}
+                          <div class="desc-label">
+                            {{ content.short_desc.label }}
+                          </div>
+                        {% endif %}
+                        {% if content.short_desc.value|render %}
+                          <div class="desc-value">
+                            {{ content.short_desc.value }}
+                          </div>
+                        {% endif %}
+                      </div>
+                      {% for desc in content.description %}
+                        {% if desc.value|render %}
+                          <div class="desc-wrapper">
+                            {% if desc.label|render %}
+                              <div class="desc-label">
+                                {{ desc.label }}
+                              </div>
+                            {% endif %}
+
+                            <div class="desc-value">
+                              {{ desc.value }}
+                            </div>
+                          </div>
+                        {% endif %}
+                      {% endfor %}
+                      {{ content.legal_notice }}
+                    </div>
+                    {% if content.description %}
+                      {% if content.read_more_style.value|render %}
+                        <span class="read-more-description-link" style="{{ content.read_more_style.value }}">{{ 'Read more'|t }}</span>
+                        <span class="read-more-description-link-mobile" style="{{ content.read_more_style.value }}">{{ 'Read more'|t }}</span>
+                      {% else %}
+                        <span class="read-more-description-link">{{ 'Read more'|t }}</span>
+                        <span class="read-more-description-link-mobile">{{ 'Read more'|t }}</span>
+                      {% endif %}
+                    {% endif %}
+                  </div>
+                </div>
+              </div>
+            {% endblock %}
+
+            {% block descBlock %}
+              <div class="description-wrapper">
+                <div class="content--description">
+                  <span class="close"></span>
+                  <h2 class="field__label">{{ 'Product Description'|t }}</h2>
+                  <div class="field__content">
+                    {% for desc in content.description  %}
+                      {% if desc.value|render %}
+                        <div class="desc-wrapper">
+                          {% if desc.label|render %}
+                            <div class="desc-label">
+                              {{ desc.label }}
+                            </div>
+                          {% endif %}
+
+                          <div class="desc-value">
+                            {{ desc.value }}
+                          </div>
+                        </div>
+                      {% endif %}
+                    {% endfor %}
+                    {{ content.legal_notice }}
+                  </div>
+                </div>
+                <div class="gradient-holder"></div>
+              </div>
+            {% endblock %}
+
+            {{ content.non_refundable }}
+
+            {% block afterDescription %}
+            {% endblock %}
+
+            {% if content.home_delivery or content.click_and_collect %}
+              <div class="delivery-options-wrapper">
+                <div class="product-out-of-stock-layer"></div>
+                <h2 class="field__label">{{ 'Delivery Options'|t }}</h2>
+                <div class="field__content">
+                  {{ content.home_delivery }}
+
+                  {% if content.click_and_collect %}
+                    {{ content.click_and_collect }}
+                  {% endif %}
+                </div>
+              </div>
+            {% endif %}
+
+            {{ content.sharethis }}
+
+          </div>
+
+          {% block productPostContentMobile %}
+          {% endblock %}
+
+          {% include directory ~ '/../alshaya_white_label/templates/partial/mobile-product-related.html.twig' %}
 
         </div>
-
-        {# {% include directory ~ '/../alshaya_white_label/templates/partial/mobile-product-related.html.twig' %} #}
-
-      </div>
+      {% endblock %}
     {% endblock %}
+
+    {% block desktopCS %}
+    {% endblock %}
+
+    {% if show_crosssell_as_matchback == true %}
+      {% include directory ~ '/../alshaya_white_label/templates/partial/product-related.html.twig' %}
+    {% endif %}
+
   </div>
-<div class="size-tray">
-    <div class="size-tray-content">
-      <div class="size-tray-buttons"></div>
-    </div>
-</div>
-{% endblock %}
 
-{% block desktopCS %}
-  {# {% include directory ~ '/../alshaya_white_label/templates/partial/product-related.html.twig' %} #}
-{% endblock %}
+  {% block productPostContent %}
+  {% endblock %}
 
-{% block reviewsSection %}
-  {% if content.reviews_section %}
-    {{content.reviews_section}}
+</article>
+<div id="dy-recommendation"></div>
+
+{% if content.reviews_section %}
+  {% if bazaar_voice_strings %}
+    {{ bazaar_voice_strings }}
   {% endif %}
-{% endblock %}
+  {{ content.reviews_section }}
+{% endif %}
