--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/footer/_footer-secondary.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/footer/_footer-secondary.scss
@@ -41,3 +41,12 @@
     }
   }
 }
+
+.block-alshaya-vat-certificate-block {
+  text-align: $right;
+  margin-#{$right}: 0;
+
+  @include breakpoint($only-mobile) {
+    text-align: center;
+  }
+}
