--- a/docroot/modules/custom/alshaya_vat/templates/alshaya-vat-certificate-block.html.twig
+++ b/docroot/modules/custom/alshaya_vat/templates/alshaya-vat-certificate-block.html.twig
@@ -1,3 +1,3 @@
 {% if link_text %}
-  <a class="vat-link" href={{ vat_url }} target="_blank"><span>{{ link_text }} </span></a>
+  <span>{{ vat_text }}: </span><a class="vat-link" href={{ vat_url }} target="_blank"><span>{{ link_text }} </span></a>
 {% endif %}
