--- a/docroot/modules/custom/alshaya_vat/templates/alshaya-vat-certificate-page.html.twig
+++ b/docroot/modules/custom/alshaya_vat/templates/alshaya-vat-certificate-page.html.twig
@@ -1,5 +1,5 @@
 {% if url %}
   <div class="vat-pdf">
-    <iframe width='100%' height='500' src= {{ url ~ '#toolbar=0' }} frameborder='0' allowfullscreen ></iframe>
+    <iframe width='100%' height='100%' src= {{ url ~ '#toolbar=0' }} frameborder='0' allowfullscreen ></iframe>
   </div>
 {% endif %}
