--- a/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
@@ -2,6 +2,8 @@
   .li-swatch-image,
   .li-swatch-color {
     a {
+      border-radius: 100%;
+
       &.active {
         &::after {
           border-color: $plp-quick-view-product-color-swatch-border;
